进行了修改以使其能够更加容易地在服务器上进行部署

--- a/conf/config.json
+++ b/conf/config.json
@@ -1,6 +1,6 @@
 {
   "mysql": {
-    "isUsed": true,
+    "isUsed": false,
     "username": "test",
     "password": "Test@123",
     "databaseName": "test_db"
